@startuml
'https://plantuml.com/class-diagram

class Ship
class CargoShip
class CruiseShip

Ship <|-- CargoShip
Ship <|-- CruiseShip


class Ship {
# shipName: String
# year: int
+Ship(shipName: String,year: int)
+setShipName(shipName: String): void
+setYear(year: int): void
+getShipName(): String
+getYear(): int
+toString(): String
}
class CargoShip {
# cargoCapacity: int
+CargoShip(shipName: String, year: int,cargoCapacity: int)
+setCargoCapacity(cargoCapacity: int): void
+getCargoCapacity(): int
+toString(): String
}
class CruiseShip {
#int passengers
+CruiseShip(shipName: String, year: int, passengers: int)
+setPassengers(passengers: int): void
+getPassengers(): int
+toString(): String
}

@enduml